refactor: remove history section and related functionality; adjust body styles
Signed-off-by: matthiasgekiere <matthias.gekiere@codekt.be>

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Opengrep Playground</title>
 
   </head>
-  <body>
+  <body style="margin: 0 !important">
     <div id="app"></div>
     <script type="module" src="/src/renderer.js"></script>
   </body>
